--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/verEvaluacion.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionEvaluaciones/verEvaluacion.xhtml
@@ -8,8 +8,8 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#{siteUrls.gestionEvaluacion}"/>
-            <p:menuitem value="Gestion de evaluaciones"></p:menuitem>
+            <p:menuitem value="Gestion de Evaluacion" url="#{siteUrls.gestionEvaluacion}"/>
+            <p:menuitem value="Vizualizar evaluacion"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda#{gestionarAlumnosController.indexMenu}').show();"></i>
@@ -34,38 +34,29 @@
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
                 <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
-                <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionarEvaluacionController.evaluacionList}" 
-                             paginator="true" rows="5"
+                <p:dataTable id="consulta" paginatorPosition="bottom"  var="car" value="#{gestionarEvaluacionController.evaluacionItemResp.sieniEvaluacionItemList}" 
+                             paginator="true" rows="10"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
-                             reflow="true">
-                    <p:column headerText="Título" filterBy="#{car.evNombre}" filterable="true" filterMatchMode="contains">
-                            #{car.evNombre}
-                        </p:column>
-                    <p:column headerText="Fecha de Inicio" filterBy="#{car.evFechaInicio}" filterable="true" filterMatchMode="contains">
-                            #{car.evFechaInicio}
-                        </p:column>
-                    <p:column headerText="Fecha de cierre" filterBy="#{car.evFechaCierre}" filterable="true" filterMatchMode="contains">
-                            #{car.evFechaCierre}
-                        </p:column>
-                    <p:column headerText="Duración" filterBy="#{car.evDuracion}" filterable="true" filterMatchMode="contains">
-                            #{car.evDuracion}
-                        </p:column>
-                    <p:column headerText="Intentos" filterBy="#{car.evIntentos}" filterable="true" filterMatchMode="contains">
-                            #{car.evIntentos}
-                        </p:column>
-                    <p:column headerText="Acciones" style="width: 12%">
-                        <p:commandLink action="#{gestionarEvaluacionController.verEvaluacion(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Evaluacion" ></i></p:commandLink>
-                        <p:commandLink action="#{gestionarEvaluacionController.modificar(car)}"><i class="icon-compose Fs25 Red MarRight10" title="Modificar Evaluacion" ></i></p:commandLink>
-                        <p:commandLink action="#{gestionarEvaluacionController.gestionarItemsEvaluacion(car)}" ><i class="icon-portfolio Fs25 Red MarRight10" title="Agregar items" ></i></p:commandLink>
-                        <p:commandLink action="#{gestionarEvaluacionController.eliminar(car)}"  onclick="PF('dlgEliminar').show();" immediate="true" >
-                            <i class="icon-close Fs25 Red MarRight10" title="Eliminar Evaluacion"></i>
-                        </p:commandLink>
+                             reflow="true" rowIndexVar="rowIndex">
+                                      
+                    <p:column headerText="Pregunta" style="width: 50%">
+                        #{car.eiPregunta}
+                    </p:column>                                                          
+                    <p:column headerText="Respuestas" style="width: 50%">
+                        <p:dataTable id="respuestas"  var="res" value="#{car.sieniEvalRespItemList}">
+                            <p:column>
+                                #{res.erRespuesta}
+                            </p:column>
+                        </p:dataTable>
+                        
                     </p:column>
+                    
+                    
                 </p:dataTable>
+
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Evaluacion" action="#{gestionarEvaluacionController.setIndexMenu(1)}"></p:commandButton>
-                <p:commandButton value="Refrescar" action="#{gestionarEvaluacionController.refresh()}" update="consulta"></p:commandButton>
+                
             </h:form>
         </p:panel>
     </ui:define>
