--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/index.xhtml
@@ -54,16 +54,16 @@
                         <p:commandLink action="#{gestionClaseInteracController.mostrar(car)}" >
                             <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Vista previa de Clase"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionClaseInteracController.modificar(car)}">
+                        <p:commandLink action="#{gestionClaseInteracController.modificar(car)}" rendered="#{loginController.mostrarA('1,2')}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar detalles Clase"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionClaseInteracController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                        <p:commandLink action="#{gestionClaseInteracController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" rendered="#{loginController.mostrarA('1,2')}" >
                             <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Clase"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionClaseInteracController.configurar(car)}"  >
+                        <p:commandLink action="#{gestionClaseInteracController.configurar(car)}"  rendered="#{loginController.mostrarA('1,2')}">
                             <i class="icon-settings Fs25 Red MarRight10" style="cursor: pointer" title="Configurar componentes de la clase"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionClaseInteracController.configurarInterac(car)}"  >
+                        <p:commandLink action="#{gestionClaseInteracController.configurarInterac(car)}" rendered="#{loginController.mostrarA('1,2')}" >
                             <i class="icon-magic20 Fs25 Red MarRight10" style="cursor: pointer" title="Configurar Interacciones entre componentes"></i>
                         </p:commandLink>
                     </p:column>
