--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/index.xhtml
@@ -45,7 +45,7 @@
                         <p:commandLink action="#{gestionClasesOnlineController.recibirClase(car)}"> 
                             <i class="icon-visibility1 Fs30 Red MarRight10" style="cursor: pointer" title="Recibir Clase en Vivo"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionClasesOnlineController.transmitirClase(car)}" >
+                        <p:commandLink action="#{gestionClasesOnlineController.transmitirClase(car)}" rendered="#{loginController.mostrarA('1,2')}" >
                             <i class="icon-videocall Fs25 Red MarRight10" style="cursor: pointer" title="Transmitir Clase en Vivo"></i>
                         </p:commandLink>
                     </p:column>
