--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -58,18 +58,18 @@
                         #{car.tipoIngreso}
                     </p:column>
                     <p:column headerText="Acciones">
-                        <p:commandLink action="#{gestionNotaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Expediente" ></i></p:commandLink>
-                        <p:commandLink action="#{gestionNotaController.modificar(car)}" >
+                        <p:commandLink action="#{gestionNotaController.ver(car)}"><i class="icon-visibility1 Fs30 Red MarRight10" title="Ver Nota" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionNotaController.modificar(car)}" rendered="#{loginController.mostrarA('1,2')}">
                             <i class="icon-compose Fs25 Red MarRight10" style="cursor: pointer" title="Modificar Nota"></i>
                         </p:commandLink>
-                        <p:commandLink action="#{gestionNotaController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                        <p:commandLink action="#{gestionNotaController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" rendered="#{loginController.mostrarA('1,2')}" >
                             <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Nota"></i>
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
-                <p:commandButton value="Cargar Notas desde Excel" actionListener="#{gestionNotaController.cargarDesdeExcel()}"></p:commandButton>
+                <p:commandButton value="Adicionar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}" rendered="#{loginController.mostrarA('1,2')}"></p:commandButton>
+                <p:commandButton value="Cargar Notas desde Excel" actionListener="#{gestionNotaController.cargarDesdeExcel()}" rendered="#{loginController.mostrarA('1,2')}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
